--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react-bootstrap": "^2.1.2",
     "react-dom": "^16.14.0",
     "react-helmet": "6.0.0-beta",
+    "react-icons": "^4.3.1",
     "react-intl": "2.8.0",
     "react-redux": "7.0.2",
     "react-router-dom": "5.0.0",
